Update outstanding layout issues on smaller screened mobile devices

--- a/frontend/src/stylesheets/about-screen.css
+++ b/frontend/src/stylesheets/about-screen.css
@@ -4,13 +4,13 @@
 
 .about-form-body {
     width: 100%;
-    height: 74%;
+    height: 73%;
     overflow-y: auto;
 }
 
 .about-form-footer {
     width: 100%;
-    height: 15%;
+    height: 16%;
 }
 
 .about-form-text {
