--- a/frontend/src/stylesheets/found-items-screen.css
+++ b/frontend/src/stylesheets/found-items-screen.css
@@ -16,7 +16,7 @@
 
 .found-items-form-body {
     width: 100%;
-    height: 85%;
+    height: 74%;
     overflow-y: auto;
 }
 
